feat: get available rental movies
